@@ -151,4 +151,12 @@
         - External dependencies:                 - Microsoft.EntityFrameworkCore.Relational v5.0.13 for targets netcoreapp3.1;net5.0
                                                                                             v6.0.4 for targets net6.0
 
+
+  [20] AllOverIt.ReactiveUI
+        - Targets                                - netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0;net6.0
+        - AllOverIt dependencies:                - [1]
+                                                 - [16]
+        - External dependencies:                 - ReactiveUI v16.4.15 for targets netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0
+                                                              v18.2.5 for targets net6.0
+
 =====================================================================================================================================================================
